# Hikrobot_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: Mv3dRgbdApi.h  Mv3dRgbdDefine.h  Mv3dRgbdImgProc.h
launch/: aligned_depth.launch  base_rgbd.launch  cam_pose.launch  with_opencv.launch
node/: Mv3dRGBD_node.cpp  aligned_depth.cpp  camera_pose.cpp  camera_ui.cpp  subscriber.cpp
node/common/: RenderImage.hpp  Utils.hpp  common.hpp
node/common/include/: RenderWindow.hpp
node/common/include/glad/: glad.c  glad.h
node/common/lib/linux32/: libglfw.so.3.4
node/common/yaml/: color_info.yaml  depth_info.yaml
rviz/: aligned_depth.rviz  cam_pose.rviz  pointcloud.rviz
video/: test.mkv
